--- a/owncloudApp/src/main/res/values-fr/strings.xml
+++ b/owncloudApp/src/main/res/values-fr/strings.xml
@@ -37,6 +37,7 @@
   <string name="prefs_accounts">Comptes</string>
   <string name="prefs_manage_accounts">Gérer les comptes</string>
   <string name="prefs_passcode">Code de sécurité</string>
+  <string name="prefs_biometric">Vérouillage biométrique</string>
   <string name="prefs_biometric_summary">Activez un code de sécurité ou un motif afin d’activer cette option</string>
   <string name="confirmation_touches_with_other_windows_title">Êtes-vous sûr de vouloir activer cette fonctionnalité ?</string>
   <string name="confirmation_touches_with_other_windows_message">Vous utilisez cette fonctionnalité sous votre propre responsabilité. Une application malveillante pourrait tenter de vous pousser à effectuer des actions en falsifiant l’application.</string>
@@ -58,7 +59,11 @@
   <string name="prefs_remember_last_share_location">Mémoriser l\'emplacement de partage</string>
   <string name="prefs_remember_last_upload_location_summary">Mémoriser le dernier emplacement de téléversement</string>
   <string name="prefs_pattern">Verrouillage par motif</string>
+  <string name="pattern_enter_pattern">Veuillez saisir votre schéma</string>
+  <string name="pattern_configure_pattern">Saisissez votre schéma</string>
+  <string name="pattern_remove_pattern">Supprimer votre schéma</string>
   <string name="pattern_incorrect_pattern">Motif incorrect</string>
+  <string name="pattern_reenter_pattern">Veullez refaire votre votre schéma</string>
   <string name="pattern_not_same_pattern">Les motifs ne sont pas identiques</string>
   <string name="pattern_stored">Modèles entreposés</string>
   <string name="pattern_removed">Modèles supprimés</string>
@@ -66,15 +71,21 @@
   <string name="passcode_already_set">Un motif et un code de sécurité ne peuvent être activés en même temps. Veuillez d’abord désactiver le code de sécurité</string>
   <string name="pattern_no_longer_required">La saisie du motif ne vous sera plus demandée</string>
   <string name="pattern_configure_your_pattern_explanation">La saisie du motif sera requise à chaque ouverture de l’application</string>
+  <string name="pass_code_locked">Vérouillé par un mot de passe</string>
+  <string name="pattern_locked">Vérouillé par un schéma</string>
   <!--Bottom navigation bar-->
   <string name="bottom_nav_files">Fichiers</string>
   <string name="bottom_nav_uploads">Téléversements</string>
+  <string name="bottom_nav_offline">Hors-ligne</string>
   <string name="bottom_nav_links">Liens</string>
   <string name="recommend_subject">Essayez %1$s sur votre smartphone !</string>
   <string name="recommend_text">J\'aimerais vous inviter à utiliser %1$s sur votre smartphone !
 Téléchargez-le ici : %2$s</string>
+  <string name="error_reason">parce que</string>
   <string name="auth_failure_snackbar">Connexion échouée</string>
+  <string name="server_not_supported">Votre serveur a une version inférieure à 10 donc n\'est pas supportée, veuillez mettre à jour votre serveur vers la dernière version</string>
   <string name="auth_failure_snackbar_action">Changer de compte</string>
+  <string name="auth_oauth_failure">Le jeton d\'accès a expiré ou est invalide. Veuillez vous reconnecter afin de réaccéder à votre compte.</string>
   <string name="auth_oauth_failure_snackbar_action">Se connecter</string>
   <string name="auth_check_server">Vérifier le serveur</string>
   <string name="auth_host_url">Adresse du serveur https://…</string>
@@ -99,6 +110,7 @@ Téléchargez-le ici : %2$s</string>
   <string name="file_list_seconds_ago">il y a quelques secondes</string>
   <string name="file_list_empty">Il n\'y a rien ici ! Envoyez donc quelque chose :)</string>
   <string name="file_list_empty_available_offline">Il n’y a pas de fichier hors connexion disponible.</string>
+  <string name="file_list_empty_shared_by_links">Aucun fichier n\'a été partagé avec un lien</string>
   <string name="file_list_loading">Chargement...</string>
   <string name="file_list_no_app_for_file_type">Aucune application trouvée pour ce type de fichier</string>
   <string name="local_file_list_empty">Aucun fichier n\'est présent dans ce dossier.</string>
@@ -131,6 +143,7 @@ Téléchargez-le ici : %2$s</string>
   <string name="common_error">Erreur</string>
   <string name="common_loading">Chargement...</string>
   <string name="common_unknown">Inconnu</string>
+  <string name="common_error_unknown">Erreur inconnue</string>
   <string name="common_pending">En attente</string>
   <string name="common_important">Important</string>
   <string name="about_title">À propos</string>
@@ -216,6 +229,8 @@ Ci-dessous la liste des fichiers locaux, et les fichiers distants dans %5$s auxq
   <string name="pass_code_wrong">Code de sécurité incorrect</string>
   <string name="pass_code_removed">Code de sécurité supprimé</string>
   <string name="pass_code_stored">Code de sécurité enregistré</string>
+  <string name="biometric_prompt_title">Connexion Biométrique</string>
+  <string name="biometric_prompt_subtitle">Connectez-vous en utilisant vos données biométriques</string>
   <string name="media_notif_ticker">%1$s lecteur de musique</string>
   <string name="media_state_playing">%1$s (lecture)</string>
   <string name="media_state_loading">%1$s (chargement)</string>
@@ -274,6 +289,8 @@ Ci-dessous la liste des fichiers locaux, et les fichiers distants dans %5$s auxq
   <string name="confirmation_remove_local">Local seulement</string>
   <string name="confirmation_remove_account_alert">Voulez-vous vraiment supprimer le compte %1$s ?</string>
   <string name="confirmation_remove_public_share_title">Supprimer le lien</string>
+  <string name="confirmation_remove_private_share_title">Supprimer partage privé</string>
+  <string name="confirmation_remove_share_message">Voullez-vous vraiment supprimer le partage %1$s ?</string>
   <string name="remove_success_msg">Suppression effectuée avec succès</string>
   <string name="remove_fail_msg">Suppression impossible</string>
   <string name="rename_dialog_title">Entrez un nouveau nom</string>
@@ -344,6 +361,7 @@ Ci-dessous la liste des fichiers locaux, et les fichiers distants dans %5$s auxq
   <string name="preview_image_error_unknown_format">Cette image ne peut pas être affichée</string>
   <string name="error__upload__local_file_not_copied">%1$s n\'a pas pu être copié dans le dossier local %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">Chemin d\'accès au répertoire de téléversement des images</string>
+  <string name="get_shares_error">Il était impossible de récupérer les fichiers depuis le server</string>
   <string name="share_link_no_support_share_api">Désolé, le partage n\'est pas disponible sur votre serveur. Veuillez contacter votre administrateur.</string>
   <string name="share_link_password_title">Saisissez un mot de passe</string>
   <string name="share_link_empty_password">Vous devez saisir un mot de passe</string>
@@ -523,6 +541,9 @@ Ci-dessous la liste des fichiers locaux, et les fichiers distants dans %5$s auxq
   <string name="welcome_feature_4_text">Vos images/vidéos ont été téléversées automatiquement</string>
   <string name="welcome_feature_5_title">Streaming vidéo</string>
   <string name="welcome_feature_5_text">Lire vos vidéos sans les télécharger</string>
+  <string name="welcome_feature_6_text">Accès plus facil et rapide à vos fichiers et liens disponibles</string>
+  <string name="welcome_feature_7_text">Vous connectez à votre serveur ownCloud avec OpenID Connect est une façon plus sécurisé de vous connecter</string>
   <string name="no_borwser_installed_alert">Pas de navigateur installé. Veuillez installer un navigateur afin de permettre une connexion sécurisée.</string>
+  <string name="common_not_found">ça n\'a pas été trouvé</string>
   <string name="get_base_url_error">Il est impossible de trouver l\'adresse du serveur</string>
 </resources>
