--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,2 +1,3 @@
 * xref:index.adoc[Using the Android App]
+* xref:faq.adoc[Frequently Asked Questions (FAQ)]
 * xref:release_notes.adoc[Release Notes]
