TROUBLESHOOTING.md ==> troubleshooting.adoc

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,3 +1,4 @@
 * xref:index.adoc[Using the Android App]
 * xref:faq.adoc[Frequently Asked Questions (FAQ)]
+* xref:troubleshooting.adoc[Troubleshooting]
 * xref:release_notes.adoc[Release Notes]
