[tx] updated from transifex

--- a/owncloudApp/src/main/res/values-zh-rTW/strings.xml
+++ b/owncloudApp/src/main/res/values-zh-rTW/strings.xml
@@ -293,9 +293,11 @@
   <string name="confirmation_remove_account_alert">你是否真的要移除這個帳號 %1$s?</string>
   <string name="confirmation_remove_public_share_title">移除連結</string>
   <string name="confirmation_remove_private_share_title">移除私人的分享</string>
+  <string name="confirmation_remove_share_message">您真的要移除%1$s分享?</string>
   <string name="remove_success_msg">成功地移除</string>
   <string name="remove_fail_msg">刪除失敗</string>
   <string name="rename_dialog_title">輸入新名稱</string>
+  <string name="available_offline_inherited_msg">包含此檔案的目錄可用的脫機使用</string>
   <string name="rename_local_fail_msg">本地的複本無法被重新命名; 請嘗試一個不同的新名稱</string>
   <string name="rename_server_fail_msg">重新命名失敗</string>
   <string name="sync_file_fail_msg">無法檢查遠端的檔案</string>
@@ -348,7 +350,12 @@
   <string name="camera_picture_upload_on_wifi">經由 wifi 上傳圖片</string>
   <string name="camera_video_upload_on_wifi">經由 wifi 上傳視訊</string>
   <string name="confirmation_disable_camera_uploads_title">確認</string>
+  <string name="confirmation_disable_pictures_upload_message">您確定您要停用此功能嗎？ 待處理的圖片將不會上傳</string>
+  <string name="confirmation_disable_videos_upload_message">您確定您要停用此功能嗎？ 待處理的視頻將不會上傳</string>
+  <string name="proper_pics_folder_warning_camera_upload">請確保選擇的目錄是您正在使用的相機保存所拍攝照片的位置。 否則，該功能將無法檢測您的照片。 請記住，照片將在拍攝後至少15分鐘內上傳。</string>
+  <string name="proper_videos_folder_warning_camera_upload">請確保選擇的目錄是您正在使用的相機保存錄製的視頻的位置。 否則，該功能將無法檢測您的視頻。 請記住，視頻將在錄製後至少15分鐘內上傳。</string>
   <string name="conflict_title">檔案衝突</string>
+  <string name="conflict_description">檔案%1$s中存在衝突點擊解決</string>
   <string name="conflict_message">您要保留那個檔案? 如果您同時選擇兩個版本, 本地的檔案將在檔案名稱後面會加上編號</string>
   <string name="conflict_keep_both">都保留</string>
   <string name="conflict_use_local_version">本地版本</string>
@@ -357,8 +364,14 @@
   <string name="preview_image_error_unknown_format">無法顯示圖片</string>
   <string name="error__upload__local_file_not_copied">%1$s 無法被複製到本地資料夾 %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">圖片上傳路徑</string>
+  <string name="get_shares_error">無法從伺服器檢索共享</string>
+  <string name="get_sharees_error">無法從伺服器檢索用戶和組</string>
+  <string name="get_capabilities_error">無法從伺服器檢索功能</string>
   <string name="share_link_no_support_share_api">很抱歉, 您的伺服器並未開啟分享的功能. 請聯絡您的
 		伺服器管理員.</string>
+  <string name="share_link_file_error">無法分享此檔案或目錄</string>
+  <string name="unshare_link_file_error">無法取消共享此檔案或目錄</string>
+  <string name="update_link_file_error">無法更新此檔案或目錄</string>
   <string name="share_link_password_title">輸入密碼</string>
   <string name="share_link_empty_password">您必須輸入密碼</string>
   <string name="activity_chooser_send_file_title">寄出</string>
@@ -371,6 +384,7 @@
   <string name="network_error_socket_exception">在與伺服器連線時發生了錯誤.</string>
   <string name="network_error_socket_timeout_exception">伺服器回應逾時</string>
   <string name="network_error_connect_timeout_exception">伺服器連接逾時</string>
+  <string name="network_host_not_available">無法訪問伺服器</string>
   <string name="forbidden_permissions">您沒有權限 %s</string>
   <string name="forbidden_permissions_rename">重新命名檔案</string>
   <string name="forbidden_permissions_delete">刪除檔案</string>
@@ -391,6 +405,7 @@
   <string name="log_send_mail_subject">%1$s Android 應用程式記錄</string>
   <string name="log_progress_dialog_text">資料載入中...</string>
   <string name="actionbar_select_all">全選</string>
+  <string name="actionbar_select_inverse">選擇逆</string>
   <string name="actionbar_move">移動</string>
   <string name="file_list_empty_moving">這裡什麼也沒有，您可以增加目錄！</string>
   <string name="folder_picker_choose_button_text">選擇</string>
@@ -426,6 +441,8 @@
   <string name="prefs_camera_upload_source_path_title">相機資料夾 (%1$s)</string>
   <string name="prefs_camera_upload_source_path_title_required">必填</string>
   <string name="prefs_camera_upload_source_path_title_optional">選填</string>
+  <string name="prefs_camera_upload_behaviour_dialogTitle">原始檔案將是</string>
+  <string name="prefs_camera_upload_behaviour_title">原始檔案將</string>
   <string name="upload_copy_files">複製檔案</string>
   <string name="upload_move_files">移動檔案</string>
   <string name="pref_behaviour_entries_keep_file">保留在原先的資料夾</string>
@@ -447,6 +464,7 @@
   <string name="share_via_link_password_title">安全</string>
   <string name="share_via_link_edit_permission_read_only_label">下載 / 檢視</string>
   <string name="share_via_link_edit_permission_read_and_write_label">下載 / 檢視 / 上傳</string>
+  <string name="share_via_link_edit_permission_upload_only_label">僅上傳（檔案刪除）</string>
   <string name="share_get_public_link_button">取得連結</string>
   <string name="share_with_title">分享給別人</string>
   <string name="share_with_edit_title">與 %1$s 分享</string>
@@ -486,6 +504,13 @@
   <string name="service_unavailable">伺服器無法使用</string>
   <string name="streaming_certificate_error">串流不能被初始化，因為您的伺服器的憑證不被信任。檔案下載會自動開始。</string>
   <string name="streaming_unrecognized_input">不支援這種影片格式</string>
+  <string name="streaming_file_not_found_error">該視頻檔案在伺服器中不再可用的</string>
+  <string name="streaming_crossed_redirection">不允許通過經由重定向進行流式傳輸</string>
+  <string name="previewing_video_common_error">該視頻無法複製</string>
+  <string name="previewing_video_not_supported">您的安卓版本不支持視頻預覽。 檔案下載將自動地開始。</string>
+  <string name="streaming_position_not_available">“位置不可用的”</string>
+  <string name="error_no_network_connection">裝置未連接到網絡</string>
+  <string name="share_no_public_links">尚未創建公開的鏈接</string>
   <string name="share_no_link_in_this_share">沒有連結的分享</string>
   <string name="share_warning_about_forwarding_public_links">任何有連結的人都能存取目錄/檔案</string>
   <string name="share_via_link_default_password">*****</string>
@@ -493,13 +518,21 @@
   <string name="share_via_link_expiration_date_enforced_label">過期 *</string>
   <string name="share_via_link_expiration_date_explanation_label">這個公開的連結會在 %1$d 天後失效</string>
   <string name="share_via_link_default_name_template">%1$s 連結</string>
+  <string name="share_via_link_empty_password">密碼為空</string>
+  <string name="private_link_info">這是一個私人連結，只有有權訪問該檔案/目錄的人才能使用它。 使用它作為您自己的永久連結，或將其他人指向共享中的文件。</string>
+  <string name="file_private_link_error">私人連結不適可用的於此檔案</string>
   <string name="download_notification_channel_name">下載</string>
+  <string name="download_notification_channel_description">查看下載檔案的名稱和進度</string>
   <string name="upload_notification_channel_name">上傳</string>
   <string name="upload_notification_channel_description">檢視上傳檔案名稱和進度</string>
   <string name="media_service_notification_channel_name">音樂播放器</string>
   <string name="media_service_notification_channel_description">查看音樂播放器</string>
   <string name="file_sync_notification_channel_name">檔案同步</string>
   <string name="file_sync_notification_channel_description">檢視檔案同步結果</string>
+  <string name="clicks_to_be_developer">您%1$d單擊以啟用開發人員菜單</string>
+  <string name="rate_dialog_title">率%1$s軟體!</string>
+  <string name="rate_dialog_description">如果您喜歡使用此軟體，可以花點時間對其進行評分嗎？ 您的反饋對我們非常重要。</string>
+  <string name="button_no_thanks_name">不用了，謝謝</string>
   <string name="button_later_name">後來</string>
   <string name="button_rate_now_name">現在就評價吧</string>
   <plurals name="items_selected_count">
