--- a/docs/modules/ROOT/pages/faq.adoc
+++ b/docs/modules/ROOT/pages/faq.adoc
@@ -12,15 +12,15 @@ Here you can find some of the most frequently asked questions about the ownCloud
 
 === Compatibility with older ownCloud server
 
-ownCloud Android app 2.15 his minimum requirement of ownCloud server 10.0 or later.
+ownCloud Android app 2.15 has minimum requirement of ownCloud server 10.0 or later.
 
-ownCloud Android app 2.9 his minimum requirement ownCloud server 9.0 or later.
+ownCloud Android app 2.9 has minimum requirement ownCloud server 9.0 or later.
 
 Check {android-legacy-central-url}[this post in the community forum] how to install older versions.
 
 === Compatibility with older Android version
 
-ownCloud Android app 2.15 his minimum requirement of Android 5.0 or later. Check {android-legacy-central-url}[this post in the community forum] how to install older versions.
+ownCloud Android app 2.15 has minimum requirement of Android 5.0 or later. Check {android-legacy-central-url}[this post in the community forum] how to install older versions.
 
 === Login with TOTP and other 2FA
 
