--- a/docs/modules/ROOT/pages/troubleshooting.adoc
+++ b/docs/modules/ROOT/pages/troubleshooting.adoc
@@ -33,12 +33,12 @@ If your issue is an app crash, also the Logcat log can be helpful. To get it:
 4. In the three-dot-button (top right corner), select Logcat
 5. Send History
 
-Deleting the history before getting logs is a good practice that will help the team to debug the problem, avoiding innecesary noise.
+Deleting the history before getting logs is a good practice that will help the team to debug the problem, avoiding unnecessary noise.
 
 ### ownCloud server Log File
 
 The ownCloud server also maintains an ownCloud specific log file. This log file must be enabled through the ownCloud Administration page. On that page, you can adjust the log level. We recommend that when setting the log file level that you set it to a verbose level like `Debug` or `Info`.
-  
+
 You can view the server log file using the web interface or you can open it directly from the file system in the ownCloud server data directory.
 
 You can find more information about ownCloud server logging at {owncloud-docs-server-logging}.
@@ -47,17 +47,17 @@ You can find more information about ownCloud server logging at {owncloud-docs-se
 
 It can be helpful to view your webserver's error log file to isolate any ownCloud-related problems. For Apache on Linux, the error logs are typically located in the `/var/log/apache2` directory. Some helpful files include the following:
 
-- `error_log` -- Maintains errors associated with PHP code. 
+- `error_log` -- Maintains errors associated with PHP code.
 - `access_log` -- Typically records all requests handled by the server; very useful as a debugging tool because the log line contains information specific to each request and its result.
-  
-The ownCloud Android app sends the `X-REQUEST-ID` header with every request. You'll find the `X-REQUEST-ID` in the `owncloud.log`, and you can configure your webserver to add the `X-REQUEST-ID` to the logs. {owncloud-docs-server-tracing}[Here] you can find more information. 
-  
+
+The ownCloud Android app sends the `X-REQUEST-ID` header with every request. You'll find the `X-REQUEST-ID` in the `owncloud.log`, and you can configure your webserver to add the `X-REQUEST-ID` to the logs. {owncloud-docs-server-tracing}[Here] you can find more information.
+
 You can find more information about Apache logging at this {apache-docs-logging}[link].
 
 == Tools
 
 === mitmproxy
 
-mitmproxy is an interactive man-in-the-middle proxy for HTTP and HTTPS with a console interface. At ownCloud we use it a lot to investigate every detail of HTTP requests and responses:  
+mitmproxy is an interactive man-in-the-middle proxy for HTTP and HTTPS with a console interface. At ownCloud we use it a lot to investigate every detail of HTTP requests and responses:
 {mitmproxy-url}
 
